# simple-clock-widget

./: CMakeLists.txt  README.md  build_mac.command  install_mac.command  uninstall_mac.command
src/: clock.cpp  clock.h  clockwidgetbase.cpp  clockwidgetbase.h  labelclockwidget.cpp  labelclockwidget.h  main.cpp  simple_clock_widget.cpp  window.cpp  window.h
